[package]
name = "mcping-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.1.3"
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
mcping = {git= "https://github.com/Scetch/mcping.git", rev = "7e74d22", features=["tokio-runtime"]}
rumqttc = "0.23.0"
serde = "1.0.190"
serde_json = "1.0.108"
time = { version = "0.3.30", features = ["formatting", "local-offset"] }
tokio = "1.33.0"
